# zcwplayer

./: Player.drawio  README.md  build.gradle  settings.gradle  zcwfeng.jks
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/top/zcwfeng/zcwplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  EnjoyPlayer.cpp  EnjoyPlayer.h  JavaCallHelper.h  Log.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/java/top/zcwfeng/zcwplayer/: EnjoyPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/top/zcwfeng/zcwplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
